--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "postcss-cli": "^8.3.1",
         "postcss-gap": "^1.0.0",
         "postcss-import": "^14.0.2",
-        "tailwindcss": "^2.2.4"
+        "tailwindcss": "^2.2.4",
+        "webpack-cli": "^4.9.1"
     },
     "browserslist": {
         "production": [
